# discord-music-bot-2

./: .gitignore  config.py  main.py  pyproject.toml
_types/: __init__.py  ds_server.py  music_info.py
cogs/: __init__.py  music_cog.py
exceptions/: __init__.py  exceptions.py
services/: music_service.py
